compiler/weave_syntax/tests/data/syntax/declarations/function-0003.error
error: Expected ';'
        --> <source>:20:10
         |
      20 |     for (var i = 0usize; i < size; ++i) { buffer[i] = byte{}; }
         |          ^^^
error: Expected ';'
        --> <source>:20:10
         |
      20 |     for (var i = 0usize; i < size; ++i) { buffer[i] = byte{}; }
         |          ^^^
error: Unexpected tokens
        --> <source>:20:10
         |
      20 |     for (var i = 0usize; i < size; ++i) { buffer[i] = byte{}; }
         |          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
